[package]
name = "nix-start"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "~4.0", features = ["derive"] }
clap_lex = "0.3.0"
home = "0.5.4"
owo-colors = "3.5.0"
